--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "bootstrap4": "^0.0.1-security",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
