--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,10 @@
+
 {
+// <reference types="@vitest/browser/context" />
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
-    { "path": "./tsconfig.node.json" }
+    { "path": "./tsconfig.node.json" },
+    
   ]
 }
